<resources>
    <string name="app_name">Nearest Eiger</string>
    <string name="made_by">Made By</string>
    <string name="made_name">Dayat TI 16</string>
    <string name="about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="find_location">Find Location</string>
    <string name="find_eiger">Find Eiger Store</string>
    <string name="official_website_eiger">Official Website Eiger</string>
    <string name="official_instagram_eiger">Official Instagram Eiger</string>
    <string name="about">About App</string>
    <string name="help">Help</string>
    <string name="other">Other</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="let_s_begin">Let\'s Begin</string>
</resources>