<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location"
            android:title="@string/find_eiger" />
        <item
            android:id="@+id/nav_website"
            android:icon="@drawable/ic_web"
            android:title="@string/official_website_eiger" />
        <item
            android:id="@+id/nav_ig"
            android:icon="@drawable/ic_photo"
            android:title="@string/official_instagram_eiger" />

    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>