<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/mobile_navigation" app:startDestination="@id/nav_map">
    <fragment android:id="@+id/nav_map" android:name="com.dayat.eigerterdekat.ui.fragments.map.MapFragment" android:label="@string/find_eiger" tools:layout="@layout/fragment_map"/>
    <activity android:id="@+id/nav_website" app:action="android.intent.action.VIEW" app:data="https://eigeradventure.com/" />
    <activity android:id="@+id/nav_ig" app:action="android.intent.action.VIEW" app:data="https://www.instagram.com/eigeradventure/" />
    <fragment android:id="@+id/nav_about" android:name="com.dayat.eigerterdekat.ui.fragments.about.AboutFragment" android:label="@string/about" tools:layout="@layout/fragment_about"/>
    <fragment android:id="@+id/nav_help" android:name="com.dayat.eigerterdekat.ui.fragments.help.HelpFragment" android:label="@string/help" tools:layout="@layout/fragment_help"/>
</navigation>